// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-checked 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    checked=""
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-default 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-disabled 1`] = `
<span
  aria-disabled="true"
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  tabindex="-1"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    disabled=""
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-disabled-checked 1`] = `
<span
  aria-disabled="true"
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  tabindex="-1"
>
  <input
    checked=""
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    disabled=""
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-indeterminate 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="true"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="IndeterminateCheckBoxIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for basic states > checkbox-unchecked 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-error 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorError MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorError MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorError MuiCheckbox-sizeMedium css-v25hf7-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-info 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorInfo MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorInfo MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorInfo MuiCheckbox-sizeMedium css-k9po0b-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-primary 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-secondary 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorSecondary MuiCheckbox-sizeMedium css-1qcubn7-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-success 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorSuccess MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorSuccess MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorSuccess MuiCheckbox-sizeMedium css-gov6-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-color-warning 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorWarning MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorWarning MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorWarning MuiCheckbox-sizeMedium css-18ad81o-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-size-large 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeLarge PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeLarge MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeLarge css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge css-uks7c6-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-size-medium 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for color and size variants > checkbox-size-small 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for customization options > checkbox-custom-icons 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <span
    aria-hidden="true"
    class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-circle-line css-1n5qiej-MuiIcon-root"
  />
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for customization options > checkbox-custom-props 1`] = `
<span
  aria-label="Custom Checkbox"
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium custom-class css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    id="custom-checkbox"
    name="test-checkbox"
    type="checkbox"
    value="custom-value"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for customization options > checkbox-custom-sx 1`] = `
<span
  class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-1p4hd7m-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
>
  <input
    class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
    data-indeterminate="false"
    type="checkbox"
  />
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
    data-testid="CheckBoxOutlineBlankIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
    />
  </svg>
</span>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for real-world scenarios > checkbox-bulk-selection 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1fdopfm-MuiPaper-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <div
    class="MuiBox-root css-1coeexk"
  >
    <span
      aria-label="Select all items"
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-indeterminate MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        data-indeterminate="true"
        type="checkbox"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="IndeterminateCheckBoxIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10H7v-2h10v2z"
        />
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body1 css-lhsbas-MuiTypography-root"
    >
      Select All
    </p>
  </div>
  <div
    class="MuiStack-root css-jfdv4h-MuiStack-root"
  >
    <div
      class="MuiBox-root css-70qvj9"
    >
      <span
        aria-label="Select Item 1"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
      >
        <input
          checked=""
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          data-indeterminate="false"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="CheckBoxIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </span>
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        Item 1
      </p>
    </div>
    <div
      class="MuiBox-root css-70qvj9"
    >
      <span
        aria-label="Select Item 2"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          data-indeterminate="false"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="CheckBoxOutlineBlankIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </span>
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        Item 2
      </p>
    </div>
    <div
      class="MuiBox-root css-70qvj9"
    >
      <span
        aria-label="Select Item 3"
        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          data-indeterminate="false"
          type="checkbox"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
          data-testid="CheckBoxOutlineBlankIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </span>
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        Item 3
      </p>
    </div>
  </div>
</div>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for real-world scenarios > checkbox-form-context 1`] = `
<form
  class="MuiBox-root css-0"
>
  <fieldset
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <legend
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-nwsdb5-MuiFormLabel-root"
    >
      Form Checkbox
    </legend>
    <span
      aria-describedby="form-help"
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        data-indeterminate="false"
        name="form-checkbox"
        required=""
        type="checkbox"
        value="form-value"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="CheckBoxOutlineBlankIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
    <p
      class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-er619e-MuiFormHelperText-root"
      id="form-help"
    >
      This checkbox is required
    </p>
  </fieldset>
</form>
`;

exports[`DsCheckbox Component > Snapshot Tests > should match snapshots for real-world scenarios > checkbox-terms-scenario 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1qg4fmi-MuiPaper-root"
  style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
>
  <p
    class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-vjrxpc-MuiTypography-root"
  >
    Terms and Conditions
  </p>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd Mui-required css-19opgx6-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-vuhw6e-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        data-indeterminate="false"
        name="terms"
        required=""
        type="checkbox"
        value="accepted"
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="CheckBoxOutlineBlankIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </span>
    <div>
      <p
        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
      >
        I accept the 
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1orsvah-MuiTypography-root-MuiLink-root"
          href="/terms"
        >
          terms and conditions
        </a>
      </p>
      <span
        aria-hidden="true"
        class="MuiFormControlLabel-asterisk css-1ppbxsa-MuiFormControlLabel-asterisk"
      >
         
        *
      </span>
    </div>
  </label>
  <p
    class="MuiTypography-root MuiTypography-body1 css-1lr0ivj-MuiTypography-root"
  >
    By checking this box, you agree to our terms of service.
  </p>
</div>
`;

exports[`DsCheckbox Component > Theme Testing > should render correctly across all color schemes with proper theme colors > checkbox-dark-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="dark"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Theme Testing > should render correctly across all color schemes with proper theme colors > checkbox-highContrast-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="highContrast"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;

exports[`DsCheckbox Component > Theme Testing > should render correctly across all color schemes with proper theme colors > checkbox-light-theme 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <span
    class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-tfp55i-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
  >
    <input
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      data-indeterminate="false"
      type="checkbox"
    />
    <span
      aria-hidden="true"
      class="notranslate MuiIcon-root MuiIcon-fontSizeInherit ri-checkbox-blank-line css-12fu13m-MuiIcon-root"
    />
  </span>
</div>
`;
